Create java 8 compatible jar