@@ -1,6 +1,8 @@
 package io.deephaven.csv.parsers;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 /** Standard system parsers for the {@link io.deephaven.csv.reading.CsvReader}. */
@@ -25,40 +27,39 @@ public class Parsers {
      * Notably, BYTE, SHORT, and FLOAT are not in the list of standard parsers. The TIMESTAMP_* parsers are never
      * included by default, because they look like ints/longs.
      */
-    public static final List<Parser<?>> DEFAULT =
-            List.of(BOOLEAN, INT, LONG, DOUBLE, DATETIME, CHAR, STRING);
+    public static final List<Parser<?>> DEFAULT = unmodifiable(BOOLEAN, INT, LONG, DOUBLE, DATETIME, CHAR, STRING);
 
     /**
      * The above plus BYTE. The TIMESTAMP_* parsers are never included by default, because they look like ints/longs.
      */
     public static final List<Parser<?>> COMPLETE =
-            List.of(BOOLEAN, BYTE, SHORT, INT, LONG, DOUBLE, DATETIME, CHAR, STRING);
+            unmodifiable(BOOLEAN, BYTE, SHORT, INT, LONG, DOUBLE, DATETIME, CHAR, STRING);
 
     /** Like COMPLETE but with FLOAT_FAST rather than DOUBLE. */
     public static final List<Parser<?>> COMPLETE_FLOAT =
-            List.of(BOOLEAN, BYTE, SHORT, INT, LONG, FLOAT_FAST, DATETIME, CHAR, STRING);
+            unmodifiable(BOOLEAN, BYTE, SHORT, INT, LONG, FLOAT_FAST, DATETIME, CHAR, STRING);
 
     /** Minimal */
-    public static final List<Parser<?>> MINIMAL = List.of(BOOLEAN, LONG, DOUBLE, DATETIME, STRING);
+    public static final List<Parser<?>> MINIMAL = unmodifiable(BOOLEAN, LONG, DOUBLE, DATETIME, STRING);
 
     /** Strings only. */
-    public static final List<Parser<?>> STRINGS = List.of(STRING);
+    public static final List<Parser<?>> STRINGS = Collections.singletonList(STRING);
 
     /** DateTime, Double, Boolean, Char, String, and timestamp (seconds). */
-    public static final List<Parser<?>> STANDARD_TIMES =
-            someOtherParsersAnd(Parsers.TIMESTAMP_SECONDS);
+    public static final List<Parser<?>> STANDARD_TIMES = someOtherParsersAnd(Parsers.TIMESTAMP_SECONDS);
 
     /** DateTime, Double, Boolean, Char, String, and timestamp (milliseconds). */
-    public static final List<Parser<?>> STANDARD_MILLITIMES =
-            someOtherParsersAnd(Parsers.TIMESTAMP_MILLIS);
+    public static final List<Parser<?>> STANDARD_MILLITIMES = someOtherParsersAnd(Parsers.TIMESTAMP_MILLIS);
 
     /** DateTime, Double, Boolean, Char, String, and timestamp (microseconds). */
-    public static final List<Parser<?>> STANDARD_MICROTIMES =
-            someOtherParsersAnd(Parsers.TIMESTAMP_MICROS);
+    public static final List<Parser<?>> STANDARD_MICROTIMES = someOtherParsersAnd(Parsers.TIMESTAMP_MICROS);
 
     /** DateTime, Double, Boolean, Char, String, and timestamp (nanoseconds). */
-    public static final List<Parser<?>> STANDARD_NANOTIMES =
-            someOtherParsersAnd(Parsers.TIMESTAMP_NANOS);
+    public static final List<Parser<?>> STANDARD_NANOTIMES = someOtherParsersAnd(Parsers.TIMESTAMP_NANOS);
+
+    private static List<Parser<?>> unmodifiable(Parser<?>... parsers) {
+        return Collections.unmodifiableList(Arrays.asList(parsers));
+    }
 
     private static List<Parser<?>> someOtherParsersAnd(final Parser<?> oneMore) {
         final List<Parser<?>> result = new ArrayList<>();
@@ -67,6 +68,6 @@ public class Parsers {
         result.add(CHAR);
         result.add(STRING);
         result.add(oneMore);
-        return List.copyOf(result);
+        return Collections.unmodifiableList(new ArrayList<>(result));
     }
 }
