@@ -26,8 +26,7 @@ public final class ParseDenseStorageToColumn {
      * @param nullParser The Parser to use if {@code parsers.size() > 1} but the column contains all null values. This
      *        is needed as a backstop because otherwise type inference would have no way to choose among the multiple
      *        parsers.
-     * @param customDoubleParser An optional (but encouraged) callback for parsing doubles faster than Java's builtin
-     *        {@link Double#parseDouble}. One such library is https://github.com/wrandelshofer/FastDoubleParser
+     * @param customDoubleParser The callback for parsing doubles.
      * @param customTimeZoneParser An optional time zone parser, if your implementation has special time zone names. For
      *        example Deephaven supports timezones like " NY" and " MN" as in "2020-03-01T12:34:56 NY" (including the
      *        space).
@@ -47,7 +46,7 @@ public final class ParseDenseStorageToColumn {
             final String nullValueLiteral,
             final SinkFactory sinkFactory)
             throws CsvReaderException {
-        Set<Parser<?>> parserSet = new HashSet<>(Objects.requireNonNullElse(parsers, Parsers.DEFAULT));
+        Set<Parser<?>> parserSet = new HashSet<>(parsers != null ? parsers : Parsers.DEFAULT);
 
         final Tokenizer tokenizer = new Tokenizer(customDoubleParser, customTimeZoneParser);
         final Parser.GlobalContext gctx =
@@ -95,15 +94,15 @@ public final class ParseDenseStorageToColumn {
             return parseNumerics(cats, gctx, ih, dsrAlt);
         }
 
-        List<Parser<?>> universeByPrecedence = List.of(Parsers.CHAR, Parsers.STRING);
+        List<Parser<?>> universeByPrecedence = Arrays.asList(Parsers.CHAR, Parsers.STRING);
         final MutableBoolean dummyBoolean = new MutableBoolean();
         final MutableLong dummyLong = new MutableLong();
         if (cats.timestampParser != null && tokenizer.tryParseLong(ih.bs(), dummyLong)) {
-            universeByPrecedence = List.of(cats.timestampParser, Parsers.CHAR, Parsers.STRING);
+            universeByPrecedence = Arrays.asList(cats.timestampParser, Parsers.CHAR, Parsers.STRING);
         } else if (cats.booleanParser != null && tokenizer.tryParseBoolean(ih.bs(), dummyBoolean)) {
-            universeByPrecedence = List.of(Parsers.BOOLEAN, Parsers.STRING);
+            universeByPrecedence = Arrays.asList(Parsers.BOOLEAN, Parsers.STRING);
         } else if (cats.dateTimeParser != null && tokenizer.tryParseDateTime(ih.bs(), dummyLong)) {
-            universeByPrecedence = List.of(Parsers.DATETIME, Parsers.STRING);
+            universeByPrecedence = Arrays.asList(Parsers.DATETIME, Parsers.STRING);
         }
         List<Parser<?>> parsersToUse = limitToSpecified(universeByPrecedence, parserSet);
         return parseFromList(parsersToUse, gctx, ih, dsrAlt);
@@ -367,7 +366,7 @@ public final class ParseDenseStorageToColumn {
             }
 
             final List<Parser<?>> allNumericParsersByPrecedence =
-                    List.of(
+                    Arrays.asList(
                             Parsers.BYTE,
                             Parsers.SHORT,
                             Parsers.INT,
@@ -376,7 +375,7 @@ public final class ParseDenseStorageToColumn {
                             Parsers.FLOAT_STRICT,
                             Parsers.DOUBLE);
             final List<Parser<?>> allCharAndStringParsersByPrecedence =
-                    List.of(Parsers.CHAR, Parsers.STRING);
+                    Arrays.asList(Parsers.CHAR, Parsers.STRING);
 
             final List<Parser<?>> numericParsers =
                     limitToSpecified(allNumericParsersByPrecedence, specifiedNumericParsers);
